5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1595_1016.log
== TEST (2019-03-26 16:46:56) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c "))
s = (a + B + c)//2
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    s = (a + B + c)//2
NameError: name 'B' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:47:19) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c "))
s = (a + b + c)//2
print(s)
-- OUTPUT:
21.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:50:12) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c "))
s = (a + b + c)//2
from math import sqrt
A = (sqrt(s*(s-a)*(s-b)*(s-c)))
print(round(A,5))
-- OUTPUT:
49.56813
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:50:24) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c "))
s = (a + b + c)//2
from math import sqrt
A = (sqrt(s*(s-a)*(s-b)*(s-c)))
print(round(A,5))
-- OUTPUT:
49.56813
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:51:02) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c "))
s = (a + b + c)/2
from math import sqrt
A = (sqrt(s*(s-a)*(s-b)*(s-c)))
print(round(A,5))
-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:51:18) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c "))
s = (a + b + c)/2
from math import sqrt
A = (sqrt(s*(s-a)*(s-b)*(s-c)))
print(round(A,5))
-- EXECUTION TIME:
0.152083
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
